--- a/teamversus/src/main/resources/application.properties
+++ b/teamversus/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#Database URL en memoria
+spring.datasource.url=jdbc:h2:mem:daru
+#Enable H2 console (http://localhost:8080/h2-console/)
+spring.h2.console.enabled=true
+#Database Username (sa usuario por defecto)
+spring.datasource.username=sa
+#Database Password (vacia por defecto)
+spring.datasource.password=
+
 spring.jpa.show-sql=true
+
+spring.mvc.hiddenmethod.filter.enabled=true
